Improve fonts related code & fix spacing between buy button and product variants selector.

--- a/sources/components/custom-styles/template-cs-main-styles.scss
+++ b/sources/components/custom-styles/template-cs-main-styles.scss
@@ -39,7 +39,7 @@
       "featured": true,
       "scope": "global"
     */
-    --main-font-family: "Avenir Next", "Helvetica Neue", "Helvetica", "Segoe UI", sans-serif;
+    --main-font-family: $base-font-family;
 
     /* VoogStyle
       "pathI18n": ["main_styles", "colors"],
