--- a/sources/stylesheets/modules/_variables.scss
+++ b/sources/stylesheets/modules/_variables.scss
@@ -16,7 +16,7 @@ $color-success: #409e13;
 $color-disabled: #ccc;
 
 // Fonts
-$base-font-family: "Avenir Next", "Helvetica Neue", "Helvetica", "Segoe UI", sans-serif;
+$base-font-family: 'Avenir Next', 'Avenir', 'Helvetica Neue', 'Helvetica', 'Segoe UI', sans-serif;
 $base-font-size: 18px;
 
 // Media query breakpoints.
